--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <div class="card-body text-md-start text-center">
-              <img src="images/blog.png" alt="service" width="70" class="img-fluid mb-4">
+              <img src="blog.png" alt="service" width="70" class="img-fluid mb-4">
               <h3>Bloging Website</h3>
               <p>Wordpress CMS Tool use & create Bloging Website</p>
             </div>
@@ -264,7 +264,7 @@
        <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <div class="card-body text-md-start text-center">
-              <img src="images/admin-panel.png" alt="service" width="70" class="img-fluid mb-4">
+              <img src="admin-panel.png" alt="service" width="70" class="img-fluid mb-4">
               <h3>Admin Panel & Backend</h3>
               <p>Create the Admin Panel PHP & SQL DATABASE</p>
             </div>
@@ -274,7 +274,7 @@
          <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <div class="card-body text-md-start text-center">
-              <img src="images/technical-support.png" alt="service" width="70" class="img-fluid mb-4">
+              <img src="technical-support.png" alt="service" width="70" class="img-fluid mb-4">
               <h3>Website Index</h3>
               <p>Index the website in Google search engine</p>
             </div>
@@ -285,7 +285,7 @@
          <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <div class="card-body text-md-start text-center">
-              <img src="images/stats.png" alt="service" width="70" class="img-fluid mb-4">
+              <img src="stats.png" alt="service" width="70" class="img-fluid mb-4">
               <h3>Maintenance Website</h3>
               <p> your website Maintenance but your website create Html & PHP, MYSQL.</p>
             </div>
@@ -296,7 +296,7 @@
        <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <div class="card-body text-md-start text-center">
-              <img src="images/search-engine.png" alt="service" width="70" class="img-fluid mb-4">
+              <img src="search-engine.png" alt="service" width="70" class="img-fluid mb-4">
               <h3>Seo optimization</h3>
               <p>website Google Rank & index</p>
             </div>
@@ -328,7 +328,7 @@
 
       <div class="col-lg-3 col-smd-6 mb-4">
         <div class="card p-0">
-          <span style="background-image:url('images/fondossys-website.jpg')"></span>
+          <span style="background-image:url('fondossys-website.jpg')"></span>
            <a href="https://www.fondossys.com/" target="_blank"> <div class="text text-center pt-2 bg-success" 
             style="height:30px;">
             <h6 class="text-white">business website</h6></div></a>
@@ -336,7 +336,7 @@
       </div>
        <div class="col-lg-3 col-smd-6 mb-4">
         <div class="card p-0">
-          <span style="background-image:url('images/food-website-min.jpg')"></span>
+          <span style="background-image:url('food-website-min.jpg')"></span>
           <a href="http://food-website.great-site.net/" target="_blank"> <div class="text text-center pt-2 bg-success" 
             style="height:30px;">
             <h6 class="text-white">Food Website</h6></div></a>  
@@ -344,7 +344,7 @@
       </div>
          <div class="col-lg-3 col-smd-6 mb-4">
         <div class="card p-0">
-          <span style="background-image:url('images/news_site-cms.jpg')"></span>
+          <span style="background-image:url('news_site-cms.jpg')"></span>
           <a href="http://newsweb.great-site.net/" target="_blank"> <div class="text text-center pt-2 bg-success" 
             style="height:30px;">
             <h6 class="text-white">News Website (CMS)</h6></div></a>  
