--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="images/LOGO.png" class="img-fluid" alt="logo">
+              <img src="LOGO.png" class="img-fluid" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
            <!--- <span class="navbar-toggler-icon"></span>--->
@@ -88,7 +88,7 @@
   <div class="container">
     <div class="row justify-content-between align-item-center">
       <div class="col-lg-5 mb-4 mb-lg-0">
-        <img src="images/about.jpg.jpg" class="img-fluid rounded-3" alt="About-us">
+        <img src="about.jpg.jpg" class="img-fluid rounded-3" alt="About-us">
       </div>
 
       <div class="col-lg-7 ps-lg-5 text-center text-lg-start">
@@ -529,7 +529,7 @@
         </form>
      </div>
      <div class="col-lg-6 order-1 mb-4 order-lg-1 mb-lg-0">
-      <img src="images/contact-us.jpg" class="img-fluid">
+      <img src="contact-us.jpg" class="img-fluid">
      </div>
 
     </div>
@@ -544,7 +544,7 @@
     <div class="row align-item-center">
       <div class="col-lg-4 col-md-6 text-center text-md-start">
         <div class="footer-logo mb-3 mb-md-0">
-          <img src="images/LOGO.png" class="img-fluid">
+          <img src="LOGO.png" class="img-fluid">
         </div> 
       </div>
       <div class="col-lg-4 col-md-6">
