--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="container">
     <div class="row justify-content-between align-item-center">
       <div class="col-lg-5 mb-4 mb-lg-0">
-        <img src="about.jpg.jpg" class="img-fluid rounded-3" alt="About-us">
+        <img src="about.jpg" class="img-fluid rounded-3" alt="About-us">
       </div>
 
       <div class="col-lg-7 ps-lg-5 text-center text-lg-start">
