--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
          <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
             <div class="card-body text-md-start text-center">
-              <img src="images/website.png" alt="service" width="70" class="img-fluid mb-4">
+              <img src="website.png" alt="service" width="70" class="img-fluid mb-4">
               <h3>Web Page Design</h3>
               <p>create custom HTML, CSS  & Boostrap templates</p>
             </div>
