--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>RK Web Development</title>
 
     <!--FAVICON-->
-    <link rel="icon" type="image/png" href="images/LOGO.png">
+    <link rel="icon" type="image/png" href="LOGO.png">
 
     <!--BOOTSTRAP 5 CDN LINKS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
