--- a/index.html
+++ b/index.html
@@ -350,6 +350,26 @@
             <h6 class="text-white">News Website (CMS)</h6></div></a>  
         </div>
       </div>
+        <div class="col-lg-3 col-smd-6 mb-4">
+        <div class="card p-0">
+          <span style="background-image:url('clinick-website.jpg')"></span>
+          <a href="https://webcodingravi.github.io/dentist-clinic.github.io/" target="_blank"> <div class="text text-center pt-2 bg-success" 
+            style="height:30px;">
+            <h6 class="text-white">News Website (CMS)</h6></div></a>  
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+      
       <!-- <div class="col-lg-3 col-smd-6 mb-4">
         <div class="card p-0">
           <span style="background-image:url('images/BOOK-COVER-DESIGN.jpg')"></span>
