--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           <span style="background-image:url('clinick-website.jpg')"></span>
           <a href="https://webcodingravi.github.io/dentist-clinic.github.io/" target="_blank"> <div class="text text-center pt-2 bg-success" 
             style="height:30px;">
-            <h6 class="text-white">News Website (CMS)</h6></div></a>  
+            <h6 class="text-white">Clinic Website</h6></div></a>  
         </div>
       </div>
 
