--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       
    <div class="col-lg-3 col-smd-6 mb-4">
         <div class="card p-0">
-          <span style="background-image:url('images/e-cmoerdce-website.jpg')"></span>
+          <span style="background-image:url('e-cmoerdce-website.jpg')"></span>
           <a href="https://webcodingravi.github.io/eCommerce-website.github.io/" target="_blank"> <div class="text text-center pt-2 bg-success" 
             style="height:30px;">
             <h6 class="text-white">E-Commerce Website</h6></div></a>  
