--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
          <div class="col-lg-3 col-smd-6 mb-4">
         <div class="card p-0">
           <span style="background-image:url('news_site-cms.jpg')"></span>
-          <a href="http://newsweb.great-site.net/" target="_blank"> <div class="text text-center pt-2 bg-success" 
+          <a href="http://newsblogsit.great-site.net/" target="_blank"> <div class="text text-center pt-2 bg-success" 
             style="height:30px;">
             <h6 class="text-white">News Website (CMS)</h6></div></a>  
         </div>
