--- a/index.html
+++ b/index.html
@@ -376,6 +376,15 @@
             <h6 class="text-white">Food React Website</h6></div></a>  
         </div>
       </div>
+
+         <div class="col-lg-3 col-smd-6 mb-4">
+        <div class="card p-0">
+          <span style="background-image:url('layout.jpg')"></span>
+          <a href="https://webcodingravi.github.io/business_website" target="_blank"> <div class="text text-center pt-2 bg-success" 
+            style="height:30px;">
+            <h6 class="text-white">Business Website</h6></div></a>  
+        </div>
+      </div>
         
 
        </div>
