--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h6>WELCOME TO MY WORLD</h6>
             <h1>I'm Ravi  <br><span>Website<br>Development.</span></h1>
             <div class="mt-4">
-                <a class="main-btn" href="RESUME.pdf">Download CV</a>
+                <a class="main-btn" href="RESUME(website).pdf">Download CV</a>
             </div>
 
             </div>
@@ -178,11 +178,21 @@
                   </div>
             </div>
 
+                <div class="single-progress">
+                    <h6>React JS(javascript Library)</h6>
+
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span class="label">70%</span>
+                  </div>
+            </div>
+
 
            
             <div class="tab-pane fade" id="pills-experiance" role="tabpanel" aria-labelledby="pills-experiance-tab">
 
-                       <li><a href="#">Backend Department <span>- Fondossys Certification</span></a> Present Job                  
+                       <li><a href="#">Computer Operator<span>- Fondossys Certification</span></a> Present Job                  
                   </li>
 
             </div>
