--- a/index.html
+++ b/index.html
@@ -121,22 +121,14 @@
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-skill" role="tabpanel" aria-labelledby="pills-skill-tab">
                   <div class="single-progress">
-                    <h6>HTML-5</h6>
+                    <h6>HTML-5 & CSS-3</h6>
 
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span class="label">90%</span>
-                  </div>
-
-                  <div class="single-progress">
-                    <h6>CSS-3</h6>
-
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
                     <span class="label">80%</span>
                   </div>
+
 
 
                         <div class="single-progress">
@@ -145,7 +137,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span class="label">89%</span>
+                    <span class="label">85%</span>
                   </div>
         
                   <div class="single-progress">
