--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h6>WELCOME TO MY WORLD</h6>
             <h1>I'm Ravi  <br><span>Website<br>Development.</span></h1>
             <div class="mt-4">
-                <a class="main-btn" href="RESUME(website).pdf">Download CV</a>
+                <a class="main-btn" href="RESUME.pdf">Download CV</a>
             </div>
 
             </div>
